# ICT_2020

./: CMakeLists.txt  ICT_2020.cpp  ICT_2020.h  README.md
DetecObj/: CMakeLists.txt  DetecObj.cpp  DetecObj.h
Gimbal/: CMakeLists.txt  JHPWMPCA9685.cpp  JHPWMPCA9685.h
SerialComm/: SerialComm.h  SerialPort.h  SerialStream.h
VidProc/: CMakeLists.txt  VidProc.cpp  VidProc.h
